# factorio-blueprint-visualizer

./: .gitignore  LICENSE  README.md  blueprintVisualizer.js  buildingSettings.js  building_settings.py  download_factorio_raw_data.py  draw.py  draw_setting_documentation.md  drawingSettings.js  drawing_settings_documentation.md  entityProperties.js  entity_properties.js  factorio_blueprint_visualizer.py  get_items.py  index.css  index.html  notebook.ipynb  random_settings.py  requirements.txt  setup.py  startExampleBlueprintString.js
example_blueprints/: city_block_josh_ventura.txt  factories.txt  tests.txt
example_settings/: minimal_belts_and_pipes.json
factorioBlueprintVisualizer/: __init__.py  building_settings.py  draw.py  example_data.py  random_settings.py  util.py  visualizer.py  visuzalizer.py
scripts/: download_factorio_raw_data.py  get_items.py  pyproject.toml
test/: test_blueprint_book.txt
test_blueprints/: test_blueprint_book.txt
website/: blueprint.txt  factorioBlueprintVisualizer-0.0.1-py2.py3-none-any.whl  factorioBlueprintVisualizer-1.0.0-py2.py3-none-any.whl  factorioBlueprintVisualizer-1.1.0-py2.py3-none-any.whl  index.py  settings.txt
